[tool.poetry]
name = "hms-downloader"
version = "0.1.0"
description = "download NOAA HMS smoke and fire shapefiles to Google Cloud using Github Actions"
authors = ["joepalmo <joepalmo7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
gcsfs = "^2025.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
